...
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/create_new_schedule_title">

            <EditText
                android:id="@+id/edit_title_schedule"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/title"
                android:importantForAutofill="no"
...
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/group_selection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical"
...
                    android:layout_height="@dimen/icon_size"
                    android:contentDescription="@string/group_icon"
                    android:padding="@dimen/icon_padding"
                    app:srcCompat="@drawable/ic_select_group" />

                <Button
                    android:id="@+id/select_group_button"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="#FFFFFF"
                    android:gravity="center"
                    android:padding="0dp"
...
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/user_selection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/group_selection">

            <LinearLayout
                android:id="@+id/select_users_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/select_users_image_view"
...
                    android:layout_height="@dimen/icon_size"
                    android:contentDescription="@string/users_icon"
                    android:padding="@dimen/icon_padding"
                    android:src="@drawable/ic_select_user" />

                <Button
                    android:id="@+id/select_user_button"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#FFFFFF"
                    android:gravity="center"
                    android:padding="0dp"
...
                <TextView
                    android:id="@+id/start_date_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:labelFor="@id/edit_start_date"
                    android:text="@string/start_date" />

                <TextView
                    android:id="@+id/start_time_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:labelFor="@id/edit_start_time"
                    android:text="@string/starts" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
...
                <TextView
                    android:id="@+id/end_date_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:labelFor="@id/edit_end_date"
                    android:text="@string/end_date" />

                <TextView
                    android:id="@+id/end_time_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:labelFor="@id/edit_end_time"
                    android:text="@string/end_time" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
...
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical"
...
                    android:layout_gravity="center"
                    android:contentDescription="@string/select_location"
                    android:padding="@dimen/icon_padding"
                    android:src="@drawable/ic_location_marker" />

                <Button
                    android:id="@+id/edit_location"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:gravity="center"
                    android:text="@string/select_location"
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>

        <Button
            android:id="@+id/set_schedule_confirm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@drawable/rounded_button_reddish"
            android:text="@string/set_schedule"
            android:textColor="@color/lightBlack"
...
