...

    <string name="app_name">BigOwlApp</string>

    <string name="send_sms">send sms</string>
    <string name="by">by</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="first_name">First Name</string>
    <string name="group_name">Group Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_search_user">Search user…</string>
    <string name="home">Home</string>
    <string name="image_url">Image URL</string>
...
    <string name="supervisor_name">supervisor_name</string>
    <string name="user_avatar">User Avatar</string>
    <string name="user_email">user_email</string>
    <string name="user_first_name">First Name</string>
    <string name="user_last_name">Last Name</string>
    <string name="user_phone_number">user_phone_number</string>
    <string name="set_schedule">Set Schedule</string>
    <string name="create_new_schedule">Create New Schedule</string>
    <string name="end_date">End Date</string>
    <string name="start_date">Start Date</string>
    <string name="title">Title</string>
    <string name="hh_mm">hh:mm</string>
    <string name="select_group">Select Group</string>
    <string name="users_icon">users_icon</string>
    <string name="select_users">Select User(s)</string>
    <string name="mm_dd_yyyy">mm/dd/yyyy</string>
    <string name="group_icon">group_icon</string>
    <string name="select_location">Select Location</string>
    <string name="log_out">Log out</string>
    <string name="overflow_menu">overflow menu</string>
    <string name="schedule">schedule</string>
    <string name="user">user</string>
    <string name="notification">notification</string>
    <string name="big_owl">Big Owl</string>
    <string name="search_user">Search User</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="accept">Accept</string>
...
    </string>
    <string name="background_location_justification">
        Location access must be set to <b>Allow all the time</b> for background location access.\n\n
        Your location will be verified at the scheduled time without having to worry the app being open.
    </string>
    <string name="view_schedule">View Schedule</string>
    <string name="create_schedule">create schedule"</string>
    <string name="till">till</string>
    <string name="at">at</string>
    <string name="member_name">member_name</string>
    <string name="member_attendance">member_attendance</string>
    <string name="from">from</string>
    <string name="schedule_report_title">schedule_report_title</string>
...
    <string name="authentication_result_message">authentication_result_message</string>
    <string name="add">ADD</string>
    <string name="maybe_later">MAYBE LATER</string>
    <string name="i_supervise">I supervise</string>
    <string name="supervising_me">supervising me</string>
    <string name="email">Email</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password_don_t_have_an_account">Forgot password? Don\'t have an account?</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in_here">Sign in here</string>
    <string name="supervision_groups">supervision groups</string>
    <string name="select_a_group_to_see_your_schedule_in_the_group">select a group to see your schedule in the group</string>
    <string name="my_scheduled">my scheduled</string>
...
